--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="ip">SERVER IP</string>
+    <string name="port">PORT</string>
+    <string name="name">NAME</string>
+    <string name="msg">MESSAGE</string>
+    <string name="hint_port">PORT NUMBER</string>
+    <string name="hint_ip">192.168.0.1</string>
+    <string name="hint_name">USER</string>
+    <string name="hint_msg">Hello, world!</string>
+    <string name="button1">Connect</string>
+    <string name="button2">Disconnect</string>
+    <string name="button3">Set Server</string>
+    <string name="button4">Close Server</string>
+    <string name="button5">Clear All Text</string>
+    <string name="button6">Send Message</string>
 </resources>
